# OMMOP

./: Makefile.am  basic.cpp  common.hpp  configure.ac  gcc.sh  kernel_2d_hip.cpp  loop.cpp  lumi_batch.sh  lumi_login.sh  rebuild_amd_mi_100.sh  rebuild_gcc.sh  rebuild_lumi_batch.sh  rebuild_lumi_login.sh
